# self_gpt

./: .gitignore  problem_001.py  pyproject.toml  test_001.py
sgpt/: app.py  cache.py  config.py  filegptd.py  function.py  ipybasic.py  kernel.py  printer.py  role.py  utils.py
sgpt/handlers/: agent_abc.py  chat_handler.py  default_agent.py  default_handler.py  file_editor_agent.py  handler.py  self_gpt.py  specialist_handler.py
sgpt/llm_functions/common/: web_search.py
tests/: test_filegptd.py  utils.py
